--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Change wrapper permissions
       run: chmod +x ./gradlew
     - name: Build artifacts
-      run: ./gradlew build
+      run: ./gradlew build --stacktrace
     - name: Upload build artifacts
       uses: actions/upload-artifact@v1
       with:
